--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -1,5 +1,5 @@
 <div class="sheet-exp flexcol">
-    <label class="section-title">APTITUDES</label>
+    <label class="section-title">Aptitudes</label>
     
     <div class="grid grid-4col">
         
@@ -77,7 +77,7 @@
         </select>
         
     </div>
-    <label class="section-title">EXPERIENCE</label>
+    <label class="section-title">Experience</label>
     <div class="flexrow">
         <div class="flexcol">
             <label>Starting Exp:</label>
@@ -96,7 +96,7 @@
             <span class="exp-item">{{data.experience.value}}</span>
         </div>
     </div>
-    <label class="section-title">ADVANCEMENTS</label>
+    <label class="section-title">Advancements</label>
     <a class="spend-exp button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
     <div class="list list4col grid grid-4col">
         <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="advancements">Name</a>
@@ -116,7 +116,7 @@
         {{/each}}
 
     </div>
-    <span class="section-title">MISSIONS</span>
+    <span class="section-title">Missions</span>
     <a class="item-create button" data-type="mission" title="Add a new Mission">Add Mission</a>
     <div class="list list5col grid grid-5col">
         <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="missions">Name</a>
