--- a/templates/actor/actor-gear.html
+++ b/templates/actor/actor-gear.html
@@ -1,6 +1,6 @@
 <div class="sheet-gear flexrow">
     <div class="cyber flexcol">
-        <span class="section-title">CYBERNETICS</span>
+        <span class="section-title">Cybernetics</span>
         <a class="item-create button" data-type="cybernetic" title="Add a new Cybernetic">Add Cybernetic</a>
         <div class="list list4col grid grid-4col">
             <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="cybernetics">Name</a>
@@ -29,13 +29,13 @@
         </div>
     </div>
     <div class="cyber flexcol">
-        <span class="section-title">CARRY</span>
+        <span class="section-title">Carry</span>
         <div class="carry flexcol">
             <span>Mod: <input type="text" class="combat-resources" data-target="data.carry.mod" value="{{data.carry.mod}}" data-dtype="Number"/></span>
             <span>Total Weight: {{data.carry.value}}kg</span>
             <span>Max Weight: {{data.carry.max}}kg</span>
         </div>
-        <span class="section-title">WARGEAR</span>
+        <span class="section-title">Wargear</span>
         <a class="wargear-create button" title="Add a new Wargear">Add Wargear</a>
 
         <div class="list list5col grid grid-5col">
