--- a/templates/actor/actorDH-sheet.html
+++ b/templates/actor/actorDH-sheet.html
@@ -7,17 +7,17 @@
         {{!-- Sheet Tab Navigation --}}
         <nav class="sheet-tabs tabs grid grid-3col" data-group="primary">
             
-            <a class="item" data-tab="main">MAIN</a>
+            <a class="item" data-tab="main">Main</a>
             <a class="item skillTab" data-tab="skills">SKILLS</a>
-            <a class="item" data-tab="tnt">TALENTS & TRAITS</a>
-            <a class="item" data-tab="gear">GEAR & CYBERNETICS</a>
-            <a class="item" data-tab="exp">EXP & MISSIONS</a>
+            <a class="item" data-tab="tnt">Talents & Traits</a>
+            <a class="item" data-tab="gear">Gear & Cybernetics</a>
+            <a class="item" data-tab="exp">Exp & Mmissions</a>
             
             
-            <a class="item" data-tab="psykana">PSYKANA</a>
-            <a class="item" data-tab="combat">COMBAT</a>
-            <a class="item" data-tab="corruption">CORRUPTION, INSANITY & INJURY</a>
-             <a class="item" data-tab="background">BACKGROUND & NOTES</a>
+            <a class="item" data-tab="psykana">Psykana</a>
+            <a class="item" data-tab="combat">Combat</a>
+            <a class="item" data-tab="corruption">Corruption, Insanity & Injury</a>
+             <a class="item" data-tab="background">Background & Notes</a>
             
         </nav>
 
