--- a/templates/chat/chat-test-popup.html
+++ b/templates/chat/chat-test-popup.html
@@ -1,4 +1,4 @@
-<a class="popup  {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
+<label class="popup  {{#if success}}test-success{{else}}test-failure{{/if}}" data-id="{{id}}">{{label}} test
     <span class="fortyk popuptext chat-background flexcol" id="{{id}}">
 
 
@@ -20,4 +20,4 @@
         {{/unless}}
     </span>
 
-</a>
+</label>
