--- a/templates/chat/chat-damage.html
+++ b/templates/chat/chat-damage.html
@@ -1,4 +1,4 @@
-<div class="fortyk chat-background flexcol">
+<div class="fortyk chat-background">
     <div class="flexcol chat-target">
         <span class="">{{wpnName}} damage roll against {{target}}</span>
 
