fix for slow crits
rolled all the active effects from crits into the main array from attack rolls to try and speed up damage rolls on multiple targets. also removed a lot for the injury creation for npcs to speed up the same thing

--- a/templates/chat/chat-forcefield-test.html
+++ b/templates/chat/chat-forcefield-test.html
@@ -1,5 +1,5 @@
 
-<div class="fortyk chat-background flexcol">
+<div class="fortyk  flexcol">
     <div class="chat-target">
         <span class="chat-line">{{title}}</span>
         <div class="flexrow">
